--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-     <html>
+<html>
+     <head>
+          <h1>
+               <div align="center">Vehnil Rangaraman</div>
+          </h1>
+     </head>
      <body>
-     <h1>Vehnil Rangaraman</h1>
-     <p>Work In Progress</p>
+          <p>Work In Progress</p>
      </body>
 </html>
