--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
      <head>
-          <h1>
-               <div align="center">Vehnil Rangaraman</div>
-          </h1>
+          <title>Vehnil Rangaraman</title>
+          <link rel="stylesheet" href="index.css">
      </head>
      <body>
+          <h1>
+               <div class="heading" align="center">Vehnil Rangaraman</div>
+          </h1>
+          <hr>
           <p>Work In Progress</p>
      </body>
 </html>
