--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html>
      <head>
           <title>Vehnil Rangaraman</title>
-          <link rel="stylesheet" href="index.css">
+          <link rel="stylesheet" 
+               href="index.css">
+          <link rel="stylesheet"
+               href="https://fonts.googleapis.com/css?family=Lora">
+          <link rel="stylesheet"
+               href="https://raw.githubusercontent.com/cyrealtype/Lora-Cyrillic/blob/main/fonts/ttf/Lora-Bold.ttf">
+          <link rel="stylesheet"
+               href="fonts/lora/Lora-Bold.ttf">
      </head>
      <body>
           <h1>
