--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
                <div class="heading" align="center">Vehnil Rangaraman</div>
           </h1>
           <hr>
-          <p>840</p>
+          <p>I love my girlfriend &lt;3 </p>
      </body>
 </html>
