--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
      <head>
-          <title>Vehnil Rangaraman</title>
+          <title>testing</title>
           <link rel="stylesheet" 
                href="index.css">
      </head>
@@ -10,6 +10,6 @@
                <div class="heading" align="center">Vehnil Rangaraman</div>
           </h1>
           <hr>
-          <p>11:31 </p>
+          <p>11:31</p>
      </body>
 </html>
