Meta data changes

--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
      <head>
-          <title>testing</title>
+          <meta charset='utf-8' />
+          <meta name="author" content="Vehnil Rangaraman" />
+          <meta name="description" content="A website I created in order to compile any of my resources I want to share with the world, like papers, class notes, and etc." />
+          <meta name="viewport" content="width=device-width" />
+          <title>Vehnil Rangaraman</title>
           <link rel="stylesheet" 
                href="index.css">
      </head>
      <body>
-          <h1>
-               <div class="heading" align="center">Vehnil Rangaraman</div>
-          </h1>
+          <div class="heading" align="center">
+               <h1>Vehnil Rangaraman</h1>
+          </div>
           <hr>
           <p>11:31</p>
+          <script src="scripts/main.js"></script>
      </body>
 </html>
