--- a/index.html
+++ b/index.html
@@ -10,11 +10,23 @@
                href="index.css">
      </head>
      <body>
-          <div class="heading" align="center">
+          <div class="heading">
                <h1>Vehnil Rangaraman</h1>
+               
           </div>
           <hr>
-          <p>11:31</p>
+          <div class="lora four">
+               <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem repellat minima optio voluptate officia, assumenda, ipsum cum veritatis, earum libero incidunt dignissimos? Obcaecati excepturi natus quas ratione, enim harum temporibus. </p>
+          </div>
+          <div class="lora five">
+               <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem repellat minima optio voluptate officia, assumenda, ipsum cum veritatis, earum libero incidunt dignissimos? Obcaecati excepturi natus quas ratione, enim harum temporibus. </p>
+          </div>
+          <div class="lora six">
+               <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem repellat minima optio voluptate officia, assumenda, ipsum cum veritatis, earum libero incidunt dignissimos? Obcaecati excepturi natus quas ratione, enim harum temporibus. </p>
+          </div>
+          <div class="lora seven">
+               <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem repellat minima optio voluptate officia, assumenda, ipsum cum veritatis, earum libero incidunt dignissimos? Obcaecati excepturi natus quas ratione, enim harum temporibus. </p>
+          </div>
           <script src="scripts/main.js"></script>
      </body>
 </html>
