--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
                href="index.css">
      </head>
      <body>
-          <div class="heading">
-               <h1>Vehnil Rangaraman</h1>
+          <div>
+               <h1 class="heading">Vehnil Rangaraman</h1>
                
           </div>
           <hr>
