--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
      </head>
      <body>
           <div>
-               <h1 class="heading">Vehnil Rangaraman</h1>
-               
+               <h1 class="heading">
+                    Vehnil Rangaraman
+               </h1>
           </div>
           <hr>
           <div class="lora four">
