--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
                </h1>
           </div>
           <hr>
-          <div class="lora four">
+          <div class="lora weight-400">
                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem repellat minima optio voluptate officia, assumenda, ipsum cum veritatis, earum libero incidunt dignissimos? Obcaecati excepturi natus quas ratione, enim harum temporibus. </p>
           </div>
-          <div class="lora five">
+          <div class="lora weight-500">
                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem repellat minima optio voluptate officia, assumenda, ipsum cum veritatis, earum libero incidunt dignissimos? Obcaecati excepturi natus quas ratione, enim harum temporibus. </p>
           </div>
-          <div class="lora six">
+          <div class="lora weight-600">
                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem repellat minima optio voluptate officia, assumenda, ipsum cum veritatis, earum libero incidunt dignissimos? Obcaecati excepturi natus quas ratione, enim harum temporibus. </p>
           </div>
-          <div class="lora seven">
+          <div class="lora weight-700">
                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem repellat minima optio voluptate officia, assumenda, ipsum cum veritatis, earum libero incidunt dignissimos? Obcaecati excepturi natus quas ratione, enim harum temporibus. </p>
           </div>
           <p>3:51</p>
