fixed title link

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
                href="index.css">
      </head>
      <body>
-          <div>
-               <h1 class="heading">
-                    Vehnil Rangaraman
-               </h1>
+          <div class="heading">
+               <a href="https://vehnil.github.io" title="Vehnil Rangaraman">
+               <h1>Vehnil Rangaraman</h1>
+               </a>
           </div>
           <hr>
           <div class="lora weight-400">
