--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      </head>
      <body>
           <div class="heading">
-               <a href="https://vehnil.github.io" title="Vehnil Rangaraman">
+               <a href="https://vehnil.github.io" title="Vehnil Rangaraman" class="unlink">
                <h1>Vehnil Rangaraman</h1>
                </a>
           </div>
