--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
                href="index.css">
      </head>
      <body>
-          <div class="heading">
+          <div>
                <a href="https://vehnil.github.io" title="Vehnil Rangaraman" class="unlink">
-               <h1>Vehnil Rangaraman</h1>
+               <h1 class="heading">Vehnil Rangaraman</h1>
                </a>
           </div>
           <hr>
